# ML2022_dataloader

opdracht/: pyproject.toml
opdracht/notebook/: dataloader.ipynb
opdracht/src/: dataloader.py
